added redirect, added noindex robot text

--- a/demo/2/text.html
+++ b/demo/2/text.html
@@ -1,3 +1,6 @@
+<head>
+    <meta name="robots" content="noindex" />
+</head>
 <a-entity
                     geometry="primitive: plane; width: 1.5; height: 0.6;"
                     material="color:black; opacity: 0;"
