--- a/demo/3/marker.html
+++ b/demo/3/marker.html
@@ -3,7 +3,9 @@
         float:left;
     }
 </style> -->
-
+<head>
+    <meta name="robots" content="noindex" />
+</head>
 <div style="
 position: absolute;
 text-align: center;
