--- a/demo/2/marker.html
+++ b/demo/2/marker.html
@@ -1,34 +1,36 @@
-<!-- <style>
-    img{
-        float:left;
-    }
-</style> -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="robots" content="noindex" />
+    </head>
+    <body>
+        <div style="
+        position: absolute;
+        text-align: center;
+        left:50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        ">
+            <img style="display:block" src="resources/demo-marker.png"/>
+            <img style="display:none" src="resources/demo-marker-2.png"/>
+            <img style="display:none" src="resources/demo-marker-3.png"/>
 
-<div style="
-position: absolute;
-text-align: center;
-left:50%;
-top: 50%;
-transform: translate(-50%, -50%);
-">
-<img style="display:block" src="resources/demo-marker.png"/>
-<img style="display:none" src="resources/demo-marker-2.png"/>
-<img style="display:none" src="resources/demo-marker-3.png"/>
+            <script>
+                let imgs = document.getElementsByTagName("img");
+                let id = 0;
 
-<script>
-    let imgs = document.getElementsByTagName("img");
-    let id = 0;
+                for(const img of imgs){
+                    img.addEventListener("click", function(){
+                        if(id == imgs.length-1)
+                            id = 0;
+                        else 
+                            id += 1;
 
-    for(const img of imgs){
-        img.addEventListener("click", function(){
-            if(id == imgs.length-1)
-                id = 0;
-            else 
-                id += 1;
-
-            img.style.display = "none";
-            imgs[id].style.display = "block"
-        })
-    }
-</script>
-</div>
+                        img.style.display = "none";
+                        imgs[id].style.display = "block"
+                    })
+                }
+            </script>
+        </div>
+    </body>
+</html>
