added homepage redirect

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             font-size: 24pt;
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         ">
-            File moved. <a style="color:#035afc; font-weight: bold;" href="https://alalalolo5721.github.io/demo/2/">Click here</a> if you are not redirected automatically.
+            Home page under construction. You probably meant to visit <a style="color:#035afc; font-weight: bold;" href="https://alalalolo5721.github.io/demo/3/">this page</a>.
         </div>
     </body>
 </html>
